--- a/GlucoMan.Maui/RecipesPage.xaml
+++ b/GlucoMan.Maui/RecipesPage.xaml
@@ -2,15 +2,82 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.RecipesPage"
-             Title="All the Recipes">
+             Title="Recipes" Loaded="PageLoaded">
     <ContentPage.Content>
-        <VerticalStackLayout>
-            <Label 
-                Text="Welcome to .NET MAUI!"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-            <Button Text="Details" x:Name="btnRecipeDetails" 
-                    Clicked="btnRecipeDetails_ClickedAsync"></Button>
-        </VerticalStackLayout>
+        <Grid Grid.RowDefinitions="20,20,45,20,50,20,60,60,20,*"
+            Grid.ColumnDefinitions="*, *, *, *">
+            <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
+                Grid.ColumnSpan="4" Text="Recipe's information" 
+                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="2" Text="Id Recipe" 
+                HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  Text="Name of Recipe" 
+                HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtIdRecipe" BackgroundColor="White" 
+                    FontSize="Medium" HorizontalTextAlignment="Center" 
+                    IsReadOnly="true"/>
+            <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" 
+                    x:Name="txtName" BackgroundColor="LightGreen" 
+                    Keyboard="Text"                     HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
+                    FontSize="Small" IsReadOnly="false"/>
+            <Button Grid.Row="2" Grid.Column="3" x:Name="btnChoose" Text="Choose" 
+                    Clicked="btnChoose_Click"></Button>
+
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2"
+                    Text="Description of Recipe" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
+
+            <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
+                    x:Name="txtDescription" BackgroundColor="LightGreen"
+                    Keyboard="Text" TextChanged="txtDescription_TextChanged"
+                    HorizontalTextAlignment="Start"
+                   Text = "{Binding Description}"/>
+
+            <Label Grid.Row="5" Grid.Column="0" Text="Total CHO%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <Entry Grid.Row="6" Grid.Column="0" x:Name="txtRecipeCarbohydrates" 
+                   BackgroundColor="GreenYellow" Keyboard="Numeric" HorizontalTextAlignment="End"
+                   FontSize="Large" Text = "{Binding Cho.Text}"/>
+            <Button Grid.Row="6" Grid.Column="2" Text="+" x:Name="btnAddRecipe" 
+                    Clicked="btnAddRecipe_Click"></Button>
+            <Button Grid.Row="6" Grid.Column="3" Text="-" x:Name="btnRemoveRecipe" 
+                    Clicked="btnRemoveRecipe_Click"></Button>
+
+            <Button Grid.Row="7" Grid.Column="0" Text="Save" x:Name="btnSaveRecipe" 
+                    Clicked="btnSaveRecipe_Click"></Button>
+            <Button Grid.Row="7" Grid.Column="1" Text="Details" x:Name="btnRecipeDetails" 
+                    Clicked="btnRecipeDetails_Click"></Button>
+            <Button Grid.Row="7" Grid.Column="2" Text="Clean&#10;Fields" x:Name="btnCleanFields" 
+                    Clicked="btnCleanFields_Click" LineBreakMode="WordWrap"></Button>
+            <Button Grid.Row="7" Grid.Column="3" Text="Search" x:Name="btnSearchRecipe" 
+                    Clicked="btnSearchRecipe_Click"></Button>
+
+            <Label Grid.Row="8" Grid.Column="0" Text="Recipes" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <ListView Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" x:Name="gridRecipes" 
+                      ItemsSource="{Binding}" ItemSelected="OnGridSelectionAsync">
+                <!-- description of data to be shown, in a DataTemplate -->
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                <Grid Margin="8">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="18"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition Width="35"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}" />
+                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding CarbohydratesPercent.Text}"/>
+                                </Grid>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </ContentPage.Content>
+
 </ContentPage>
