--- a/GlucoMan.Maui/InjectionsPage.xaml
+++ b/GlucoMan.Maui/InjectionsPage.xaml
@@ -4,7 +4,7 @@
              x:Class="GlucoMan.Maui.InjectionsPage"
              Title="Insulin injections">
     <ContentPage.Content>
-        <Grid RowDefinitions="50,50,55,30,50,25,50,30,*"
+        <Grid RowDefinitions="50,50,55,30,50,25,50,30,20,*"
               ColumnDefinitions="*,*,*,*">
             <Button Grid.Row="0" Grid.Column="0" Text="Front" x:Name="btnFront" Clicked="btnFront_ClickedAsync"></Button>
             <Button Grid.Row="0" Grid.Column="1" Text="Back" x:Name="btnBack" Clicked="btnBack_Clicked_Async"></Button>
@@ -50,8 +50,8 @@
                 <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddInjection" Clicked="btnAddInjection_Click"></Button>
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveInjection" Clicked="btnRemoveInjection_Click"></Button>
             </Grid>
-
-            <HorizontalStackLayout Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2">
+            
+            <HorizontalStackLayout Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3">
                 <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
@@ -60,7 +60,7 @@
                         </OnPlatform>
                     </CheckBox.Margin>
                 </CheckBox>
-                <Label VerticalTextAlignment="End" VerticalOptions="Start" Text="Add with Now as time">
+                <Label VerticalTextAlignment="End" VerticalOptions="End" Text="Add with Now as time">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer>
 
@@ -69,29 +69,31 @@
                 </Label>
             </HorizontalStackLayout>
 
-            <Entry Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="White" 
+            <Entry Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="PaleGreen" 
                    FontSize="Small" HorizontalTextAlignment="Start" IsReadOnly="false"/>
 
-            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Text="Insulin Units [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" Text="Injections" FontAttributes="Bold"
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
 
-            <ListView Grid.Row="8" Grid.ColumnSpan="4" x:Name="gridInjections" ItemsSource="{Binding}"
+            <Grid Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4"
+                  RowDefinitions="*" ColumnDefinitions="*,55,55">
+                <Label Grid.Column="0" Text="Time" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+                <Label Grid.Column="1" Text="Insulin" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+                <Label Grid.Column="2" Text="Type" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            </Grid>
+
+            <ListView Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" 
+                      x:Name="gridInjections" ItemsSource="{Binding}"
                       ItemSelected="OnGridSelectionAsync" >
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Grid Margin="10">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition />
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Timestamp.DateTime}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding InsulinValue.Text}"/>
+                                <Grid ColumnDefinitions="*,55,55">
+                                    <Label Grid.Column="0" Text="{Binding Timestamp.DateTime}" HorizontalTextAlignment="Center" />
+                                    <Label Grid.Column="1" Text="{Binding InsulinValue.Text}" HorizontalTextAlignment="Center" />
+                                    <Label Grid.Column="2" Text="{Binding IdTypeOfInsulinSpeed}" HorizontalTextAlignment="Center" />
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
